# scarlet-egui

./: Cargo.toml  flake.nix
src/: frame.rs  lib.rs  nine_slice.rs  slice9.rs  widget_state.rs
src/egui/: group.rs  mod.rs
src/frame/: mod.rs
src/frame/frame_decoration/: mod.rs  nine_slice.rs  simple.rs
