[package]
name = "scarlet-egui"
version = "0.0.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", optional = true }
egui = { version = "0.30.0", default-features = false, features = [ "default_fonts" ] }

[features]
default = ["frame"]
widget_state = []
nine_slice = [ "image", "widget_state" ]
frame = [ "nine_slice" ]
